Improved exe and json vector file icon

--- a/Ethereal Cloud/Pages/Upload.cshtml
+++ b/Ethereal Cloud/Pages/Upload.cshtml
@@ -212,11 +212,11 @@
             case "application/x-msdownload":
             case "application/octet-stream":
             case "application/vnd.microsoft.portable-executable":
-                return "file-executable.png"; // Executable (.exe)
+                return "file-executable.svg"; // Executable (.exe)
 
             //JSON
             case "application/json":
-                return "file-json.png";
+                return "file-json.svg";
 
             //Plain text
             case "text/plain":
