--- a/Ethereal Cloud/wwwroot/css/Upload.css
+++ b/Ethereal Cloud/wwwroot/css/Upload.css
@@ -143,6 +143,16 @@
     }
 
 
+
+
+
+
+
+
+
+
+
+/*New stuff in need of organising */
 .fileButtonHolder {
     position: absolute;
     top: 0;
@@ -159,6 +169,31 @@
     width: 40px;
     border: 2px solid #000000;
 }
+
+.file-info {
+    display: none;
+}
+
+.menu {
+    //display: none; /* Initially hide the menu */
+    position: absolute;
+    background-color: #f9f9f9;
+    border: 1px solid #ccc;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    z-index: 1;
+}
+
+.menu-item {
+    padding: 8px 12px;
+    cursor: pointer;
+}
+
+    .menu-item:hover {
+        background-color: #e9e9e9;
+    }
+
+
+
 
 
 
