Folder navigation double click functionality

--- a/Ethereal Cloud/Pages/Upload.cshtml
+++ b/Ethereal Cloud/Pages/Upload.cshtml
@@ -4,7 +4,7 @@
 @{
     ViewBag.Title = "Upload";
     Layout = "Shared/_Layout.cshtml";
-    <link rel="stylesheet" href="/css/Upload.css" asp-append-version="true">
+            <link rel="stylesheet" href="/css/Upload.css" asp-append-version="true">
 
 }
 
@@ -76,7 +76,7 @@
                 <div class="row" id="scrollbox-contents">
                     @foreach (var display in Model.DisplayList)
                     {
-                        <div id="uploaded-files" class="file-hover" onmouseover="showButton('fileButtonHolder-@display.Id')" onmouseout="hideButton('fileButtonHolder-@display.Id', 'file-info-@display.Id')">
+                        <div id="uploaded-files" class="file-hover" ondblclick="navIntoFolder('@display.Id','@display.Type','@display.Name')" onmouseover="showButton('fileButtonHolder-@display.Id')" onmouseout="hideButton('fileButtonHolder-@display.Id', 'file-info-@display.Id')">
                             <a id="fileLink">
                                 <img id="uploaded-files-img"src="~/images/file-icons/@GetImageForFileType(@display.Type)" alt="logo" class="logo">
                             </a>
@@ -166,125 +166,114 @@
 @{
 
 
-<script>
-    function showButton(id) {
-        var button = document.getElementById(id);
-        button.style.display = 'inline';
-    }
+        <script>
+            function showButton(id) {
+                var button = document.getElementById(id);
+                button.style.display = 'inline';
+            }
 
-    function hideButton(id) {
-        var button = document.getElementById(id);
-        button.style.display = 'none';
-    }
+            function hideButton(id) {
+                var button = document.getElementById(id);
+                button.style.display = 'none';
+            }
 
-    function hideButton(holderId, menuId) {
-        var holder = document.getElementById(holderId);
-        var menu = document.getElementById(menuId);
-        if (menu.style.display !== "block") {
-            holder.style.display = "none";
-        }
-    }
+            function hideButton(holderId, menuId) {
+                var holder = document.getElementById(holderId);
+                var menu = document.getElementById(menuId);
+                if (menu.style.display !== "block") {
+                    holder.style.display = "none";
+                }
+            }
 
-    function toggleFileInfo(id) {
+            function toggleFileInfo(id) {
 
-        var fileInfo = document.getElementById(id);
-        var expanded = fileInfo.getAttribute('aria-expanded') === 'true';
+                var fileInfo = document.getElementById(id);
+                var expanded = fileInfo.getAttribute('aria-expanded') === 'true';
 
-        // Toggle the aria-expanded attribute
-        fileInfo.setAttribute('aria-expanded', !expanded);
+                // Toggle the aria-expanded attribute
+                fileInfo.setAttribute('aria-expanded', !expanded);
 
-        // Toggle the visibility of the file info
-        if (expanded) {
-            fileInfo.style.display = 'none';
-        } else {
-            fileInfo.style.display = 'block';
-        }
-    }
+                // Toggle the visibility of the file info
+                if (expanded) {
+                    fileInfo.style.display = 'none';
+                } else {
+                    fileInfo.style.display = 'block';
+                }
+            }
 
-    function showMenu(id) {
-        var menu = document.getElementById(id + "-menu");
-        menu.style.display = "block";
-    }
+            function showMenu(id) {
+                var menu = document.getElementById(id + "-menu");
+                menu.style.display = "block";
+            }
 
-    function hideMenu(id) {
-        var menu = document.getElementById(id + "-menu");
-        menu.style.display = "none";
-    }
+            function hideMenu(id) {
+                var menu = document.getElementById(id + "-menu");
+                menu.style.display = "none";
+            }
 
-    document.body.addEventListener('click', function (event) {
-
-
-        var parent = event.target.parentNode;
-
-        if (parent.id === 'fileSettingsButton'){
-
-            return;
-        }
-
-        var menuOpen = document.querySelectorAll('.file-info');
-        menuOpen.forEach(function (menu) {
-            menu.setAttribute('aria-expanded', false);
-            menu.style.display = 'none';
-        });
-
-        var buttonHolder = document.querySelectorAll('.fileButtonHolder');
-        buttonHolder.forEach(function (button) {
-            button.style.display = 'none';
-        });
-
-    });
+            document.body.addEventListener('click', function (event) {
 
 
+                var parent = event.target.parentNode;
 
-    //Menu functions
+                if (parent.id === 'fileSettingsButton'){
 
-    function downloadFile(id) {
+                    return;
+                }
 
-        document.getElementById('fileIdDownloadInput').value = id;
+                var menuOpen = document.querySelectorAll('.file-info');
+                menuOpen.forEach(function (menu) {
+                    menu.setAttribute('aria-expanded', false);
+                    menu.style.display = 'none';
+                });
 
-        // Submit the form
-        document.getElementById('downloadForm').submit();
-    }
+                var buttonHolder = document.querySelectorAll('.fileButtonHolder');
+                buttonHolder.forEach(function (button) {
+                    button.style.display = 'none';
+                });
 
-    function deleteFile(id, fileType) {
-        document.getElementById('fileIdInput').value = id;
-        document.getElementById('typeInput').value = fileType;
-
-        // Submit the form
-        document.getElementById('deleteForm').submit();
-    }
-
-    function renameFile(id) {
-        // Implement rename logic here
-        console.log("Renaming file: " + id);
-    }
+            });
 
 
 
+            //Menu functions
+
+            function downloadFile(id) {
+
+                document.getElementById('fileIdDownloadInput').value = id;
+
+                // Submit the form
+                document.getElementById('downloadForm').submit();
+            }
+
+            function deleteFile(id, fileType) {
+                document.getElementById('fileIdInput').value = id;
+                document.getElementById('typeInput').value = fileType;
+
+                // Submit the form
+                document.getElementById('deleteForm').submit();
+            }
+
+            function renameFile(id) {
+                // Implement rename logic here
+                console.log("Renaming file: " + id);
+            }
 
 
-        /*
-        function navIntoFolder() {
-            var contextMenu = document.getElementById('contextMenu');
-            // Implement download functionality using fileId
+            function navIntoFolder(id, fileType, name) {
+                if (fileType === "Folder") {
 
-            var Id = contextMenu.dataset.fileId;
-            var Name = contextMenu.dataset.fileName;
+                    document.getElementById('idNavInput').value = id;
+                    document.getElementById('nameNavInput').value = name;
 
-            console.log("Id: " + Id + " Name: " + Name);
+                    // Submit the form
+                    document.getElementById('navForm').submit();
+                } else {
 
-            document.getElementById('idNavInput').value = Id;
-            document.getElementById('nameNavInput').value = Name;
-
-            // Submit the form
-            document.getElementById('navForm').submit();
-        }
-        */
-
-
-
-
-</script>
+                    downloadFile(id);
+                }
+            }
+        </script>
 
 
 
@@ -302,42 +291,42 @@
 
 
     <!-- Scripts -->
-    <script>
-        // Console logger
-        var logger = '@ViewData["logger"]';
-        if (logger !== null) {
-            console.log(decodeHtml(logger));
-        }
+            <script>
+                // Console logger
+                var logger = '@ViewData["logger"]';
+                if (logger !== null) {
+                    console.log(decodeHtml(logger));
+                }
 
-        //Decodes html text
-        function decodeHtml(html) {
-            var txt = document.createElement("textarea");
-            txt.innerHTML = html;
-            return txt.value;
-        }
+                //Decodes html text
+                function decodeHtml(html) {
+                    var txt = document.createElement("textarea");
+                    txt.innerHTML = html;
+                    return txt.value;
+                }
 
-        //Changes the sort image when pressed
-        function toggleImage() {
-            var imageElement = document.getElementById('toggleImage');
-            if (imageElement.src.endsWith('sort-alpha-down.svg')) {
-                imageElement.src = 'images/tools/sort-alpha-up.svg';
-            } else {
-                imageElement.src = 'images/tools/sort-alpha-down.svg';
-            }
-        }
+                //Changes the sort image when pressed
+                function toggleImage() {
+                    var imageElement = document.getElementById('toggleImage');
+                    if (imageElement.src.endsWith('sort-alpha-down.svg')) {
+                        imageElement.src = 'images/tools/sort-alpha-up.svg';
+                    } else {
+                        imageElement.src = 'images/tools/sort-alpha-down.svg';
+                    }
+                }
 
-        //Loads naming folder popup
-        function showInputBox() {
-            document.getElementById('input-box').style.display = 'block';
-            document.querySelector('#input-box input[name="foldername"]').focus();
-        }
+                //Loads naming folder popup
+                function showInputBox() {
+                    document.getElementById('input-box').style.display = 'block';
+                    document.querySelector('#input-box input[name="foldername"]').focus();
+                }
 
-        //Cancels the folder creation
-        function cancelFolderCreation() {
-            document.getElementById('input-box').style.display = 'none';
-        }
+                //Cancels the folder creation
+                function cancelFolderCreation() {
+                    document.getElementById('input-box').style.display = 'none';
+                }
 
-    </script>
+            </script>
 
     string GetImageForFileType(string fileType)
     {
@@ -406,22 +395,22 @@
     }
 
     
-<!-- Hidden form for delete action -->
-    <form id="deleteForm" method="post" asp-page-handler="Delete">
-        <input name="fileId" type="hidden" id="fileIdInput">
-        <input name="type" type="hidden" id="typeInput">
-    </form>
+    <!-- Hidden form for delete action -->
+            <form id="deleteForm" method="post" asp-page-handler="Delete">
+                <input name="fileId" type="hidden" id="fileIdInput">
+                <input name="type" type="hidden" id="typeInput">
+            </form>
 
-<!-- Hidden form for download action -->
-    <form id="downloadForm" method="post" asp-page-handler="Download">
-        <input name="fileId" type="hidden" id="fileIdDownloadInput">
-    </form>
+    <!-- Hidden form for download action -->
+            <form id="downloadForm" method="post" asp-page-handler="Download">
+                <input name="fileId" type="hidden" id="fileIdDownloadInput">
+            </form>
 
-<!-- Hidden form for nav action -->
-    <form id="navForm" method="post" asp-page-handler="Navigate">
-        <input name="Id" type="hidden" id="idNavInput">
-        <input name="Name" type="hidden" id="nameNavInput">
-    </form>
+    <!-- Hidden form for nav action -->
+            <form id="navForm" method="post" asp-page-handler="Navigate">
+                <input name="Id" type="hidden" id="idNavInput">
+                <input name="Name" type="hidden" id="nameNavInput">
+            </form>
 
                                 
 }
