--- a/Ethereal Cloud/Pages/Upload.cshtml
+++ b/Ethereal Cloud/Pages/Upload.cshtml
@@ -4,7 +4,7 @@
 @{
     ViewBag.Title = "Upload";
     Layout = "Shared/_Layout.cshtml";
-            <link rel="stylesheet" href="/css/Upload.css" asp-append-version="true">
+                        <link rel="stylesheet" href="/css/Upload.css" asp-append-version="true">
 
 }
 
@@ -18,8 +18,8 @@
 
             <!-- Sort button -->
             <div id="filepath-button" class="col">
-                <a href="#" onclick="toggleImage()">
-                    <img title="Sort" id="toggleImage" class="row" src="~/images/tools/sort-alpha-down.svg" alt="path">
+                <a href="#" onclick="toggleSort()">
+                    <img title="Sort" id="toggleImage" class="row" src="@SetSort()" alt="path">
                 </a>
             </div>
 
@@ -166,114 +166,114 @@
 @{
 
 
-        <script>
-            function showButton(id) {
-                var button = document.getElementById(id);
-                button.style.display = 'inline';
-            }
+                    <script>
+                        function showButton(id) {
+                            var button = document.getElementById(id);
+                            button.style.display = 'inline';
+                        }
 
-            function hideButton(id) {
-                var button = document.getElementById(id);
-                button.style.display = 'none';
-            }
+                        function hideButton(id) {
+                            var button = document.getElementById(id);
+                            button.style.display = 'none';
+                        }
 
-            function hideButton(holderId, menuId) {
-                var holder = document.getElementById(holderId);
-                var menu = document.getElementById(menuId);
-                if (menu.style.display !== "block") {
-                    holder.style.display = "none";
-                }
-            }
+                        function hideButton(holderId, menuId) {
+                            var holder = document.getElementById(holderId);
+                            var menu = document.getElementById(menuId);
+                            if (menu.style.display !== "block") {
+                                holder.style.display = "none";
+                            }
+                        }
 
-            function toggleFileInfo(id) {
+                        function toggleFileInfo(id) {
 
-                var fileInfo = document.getElementById(id);
-                var expanded = fileInfo.getAttribute('aria-expanded') === 'true';
+                            var fileInfo = document.getElementById(id);
+                            var expanded = fileInfo.getAttribute('aria-expanded') === 'true';
 
-                // Toggle the aria-expanded attribute
-                fileInfo.setAttribute('aria-expanded', !expanded);
+                            // Toggle the aria-expanded attribute
+                            fileInfo.setAttribute('aria-expanded', !expanded);
 
-                // Toggle the visibility of the file info
-                if (expanded) {
-                    fileInfo.style.display = 'none';
-                } else {
-                    fileInfo.style.display = 'block';
-                }
-            }
+                            // Toggle the visibility of the file info
+                            if (expanded) {
+                                fileInfo.style.display = 'none';
+                            } else {
+                                fileInfo.style.display = 'block';
+                            }
+                        }
 
-            function showMenu(id) {
-                var menu = document.getElementById(id + "-menu");
-                menu.style.display = "block";
-            }
+                        function showMenu(id) {
+                            var menu = document.getElementById(id + "-menu");
+                            menu.style.display = "block";
+                        }
 
-            function hideMenu(id) {
-                var menu = document.getElementById(id + "-menu");
-                menu.style.display = "none";
-            }
+                        function hideMenu(id) {
+                            var menu = document.getElementById(id + "-menu");
+                            menu.style.display = "none";
+                        }
 
-            document.body.addEventListener('click', function (event) {
-
-
-                var parent = event.target.parentNode;
-
-                if (parent.id === 'fileSettingsButton'){
-
-                    return;
-                }
-
-                var menuOpen = document.querySelectorAll('.file-info');
-                menuOpen.forEach(function (menu) {
-                    menu.setAttribute('aria-expanded', false);
-                    menu.style.display = 'none';
-                });
-
-                var buttonHolder = document.querySelectorAll('.fileButtonHolder');
-                buttonHolder.forEach(function (button) {
-                    button.style.display = 'none';
-                });
-
-            });
+                        document.body.addEventListener('click', function (event) {
 
 
+                            var parent = event.target.parentNode;
 
-            //Menu functions
+                            if (parent.id === 'fileSettingsButton'){
 
-            function downloadFile(id) {
+                                return;
+                            }
 
-                document.getElementById('fileIdDownloadInput').value = id;
+                            var menuOpen = document.querySelectorAll('.file-info');
+                            menuOpen.forEach(function (menu) {
+                                menu.setAttribute('aria-expanded', false);
+                                menu.style.display = 'none';
+                            });
 
-                // Submit the form
-                document.getElementById('downloadForm').submit();
-            }
+                            var buttonHolder = document.querySelectorAll('.fileButtonHolder');
+                            buttonHolder.forEach(function (button) {
+                                button.style.display = 'none';
+                            });
 
-            function deleteFile(id, fileType) {
-                document.getElementById('fileIdInput').value = id;
-                document.getElementById('typeInput').value = fileType;
-
-                // Submit the form
-                document.getElementById('deleteForm').submit();
-            }
-
-            function renameFile(id) {
-                // Implement rename logic here
-                console.log("Renaming file: " + id);
-            }
+                        });
 
 
-            function navIntoFolder(id, fileType, name) {
-                if (fileType === "Folder") {
 
-                    document.getElementById('idNavInput').value = id;
-                    document.getElementById('nameNavInput').value = name;
+                        //Menu functions
 
-                    // Submit the form
-                    document.getElementById('navForm').submit();
-                } else {
+                        function downloadFile(id) {
 
-                    downloadFile(id);
-                }
-            }
-        </script>
+                            document.getElementById('fileIdDownloadInput').value = id;
+
+                            // Submit the form
+                            document.getElementById('downloadForm').submit();
+                        }
+
+                        function deleteFile(id, fileType) {
+                            document.getElementById('fileIdInput').value = id;
+                            document.getElementById('typeInput').value = fileType;
+
+                            // Submit the form
+                            document.getElementById('deleteForm').submit();
+                        }
+
+                        function renameFile(id) {
+                            // Implement rename logic here
+                            console.log("Renaming file: " + id);
+                        }
+
+
+                        function navIntoFolder(id, fileType, name) {
+                            if (fileType === "Folder") {
+
+                                document.getElementById('idNavInput').value = id;
+                                document.getElementById('nameNavInput').value = name;
+
+                                // Submit the form
+                                document.getElementById('navForm').submit();
+                            } else {
+
+                                downloadFile(id);
+                            }
+                        }
+                    </script>
 
 
 
@@ -291,42 +291,55 @@
 
 
     <!-- Scripts -->
-            <script>
-                // Console logger
-                var logger = '@ViewData["logger"]';
-                if (logger !== null) {
-                    console.log(decodeHtml(logger));
-                }
+    <script>
+        // Console logger
+        var logger = '@ViewData["logger"]';
+        if (logger !== null) {
+            console.log(decodeHtml(logger));
+        }
 
-                //Decodes html text
-                function decodeHtml(html) {
-                    var txt = document.createElement("textarea");
-                    txt.innerHTML = html;
-                    return txt.value;
-                }
+        //Decodes html text
+        function decodeHtml(html) {
+            var txt = document.createElement("textarea");
+            txt.innerHTML = html;
+            return txt.value;
+        }
 
-                //Changes the sort image when pressed
-                function toggleImage() {
-                    var imageElement = document.getElementById('toggleImage');
-                    if (imageElement.src.endsWith('sort-alpha-down.svg')) {
-                        imageElement.src = 'images/tools/sort-alpha-up.svg';
-                    } else {
-                        imageElement.src = 'images/tools/sort-alpha-down.svg';
-                    }
-                }
+        //Changes the sort image when pressed
+        function toggleSort() {
+            // Submit the form
+            document.getElementById('sortForm').submit();
+        }
 
-                //Loads naming folder popup
-                function showInputBox() {
-                    document.getElementById('input-box').style.display = 'block';
-                    document.querySelector('#input-box input[name="foldername"]').focus();
-                }
+        //Loads naming folder popup
+        function showInputBox() {
+            document.getElementById('input-box').style.display = 'block';
+            document.querySelector('#input-box input[name="foldername"]').focus();
+        }
 
-                //Cancels the folder creation
-                function cancelFolderCreation() {
-                    document.getElementById('input-box').style.display = 'none';
-                }
+        //Cancels the folder creation
+        function cancelFolderCreation() {
+            document.getElementById('input-box').style.display = 'none';
+        }
 
-            </script>
+    </script>
+
+    string SetSort()
+    {
+        if (Model.sortDisplay)
+        {
+            // Alphabetical
+            return "images/tools/sort-alpha-up.svg";
+
+        }
+        else
+        {
+            // Backwards alphabetical
+            return "images/tools/sort-alpha-down.svg";
+        }
+    }
+
+
 
     string GetImageForFileType(string fileType)
     {
@@ -412,5 +425,12 @@
                 <input name="Name" type="hidden" id="nameNavInput">
             </form>
 
-                                
+
+
+
+    <!-- Hidden form for sorting -->
+        <form id="sortForm" method="post" asp-page-handler="Sort">
+        </form>
+
+
 }
