--- a/Ethereal Cloud/Pages/Upload.cshtml
+++ b/Ethereal Cloud/Pages/Upload.cshtml
@@ -4,7 +4,7 @@
 @{
     ViewBag.Title = "Upload";
     Layout = "Shared/_Layout.cshtml";
-                        <link rel="stylesheet" href="/css/Upload.css" asp-append-version="true">
+                                <link rel="stylesheet" href="/css/Upload.css" asp-append-version="true">
 
 }
 
@@ -83,7 +83,7 @@
                             <p>@display.Name</p>
 
                             <!-- Buttons for files/folders-->
-                            <div id="fileButtonHolder-@display.Id" class="fileButtonHolder" style="display:none;">
+                            <div id="fileButtonHolder-@display.Id" class="fileButtonHolder" style="">
 
 
                                 @if (@display.Type == "Folder"){
@@ -166,114 +166,121 @@
 @{
 
 
-                    <script>
-                        function showButton(id) {
-                            var button = document.getElementById(id);
-                            button.style.display = 'inline';
-                        }
+            <script>
+                function showButton(id) {
+                    var button = document.getElementById(id);
+                    button.style.display = 'inline';
+                }
 
-                        function hideButton(id) {
-                            var button = document.getElementById(id);
+                function hideButton(id) {
+                    var button = document.getElementById(id);
+                    button.style.display = 'none';
+                }
+
+                function hideButton(holderId, menuId) {
+                    var holder = document.getElementById(holderId);
+                    var menu = document.getElementById(menuId);
+                    if (menu.style.display !== "block") {
+                        holder.style.display = "none";
+                    }
+                }
+
+                function toggleFileInfo(id) {
+
+                    var fileInfo = document.getElementById(id);
+                    var expanded = fileInfo.getAttribute('aria-expanded') === 'true';
+
+                    // Toggle the aria-expanded attribute
+                    fileInfo.setAttribute('aria-expanded', !expanded);
+
+                    // Toggle the visibility of the file info
+                    if (expanded) {
+                        fileInfo.style.display = 'none';
+                    } else {
+                        fileInfo.style.display = 'block';
+                    }
+                }
+
+                function showMenu(id) {
+                    if (matchMedia('(hover: hover)').matches) {
+                        var menu = document.getElementById(id + "-menu");
+
+                        menu.style.display = "block";
+                    }
+                    
+                }
+
+                function hideMenu(id) {
+                    var menu = document.getElementById(id + "-menu");
+                    menu.style.display = "none";
+                }
+
+                document.body.addEventListener('click', function (event) {
+
+
+                    var parent = event.target.parentNode;
+
+                    if (parent.id === 'fileSettingsButton'){
+
+                        return;
+                    }
+
+
+                    var menuOpen = document.querySelectorAll('.file-info');
+                    menuOpen.forEach(function (menu) {
+                        menu.setAttribute('aria-expanded', false);
+                        menu.style.display = 'none';
+                    });
+                    
+                    if (matchMedia('(hover: hover)').matches) {
+                        var buttonHolder = document.querySelectorAll('.fileButtonHolder');
+                        buttonHolder.forEach(function (button) {
                             button.style.display = 'none';
-                        }
-
-                        function hideButton(holderId, menuId) {
-                            var holder = document.getElementById(holderId);
-                            var menu = document.getElementById(menuId);
-                            if (menu.style.display !== "block") {
-                                holder.style.display = "none";
-                            }
-                        }
-
-                        function toggleFileInfo(id) {
-
-                            var fileInfo = document.getElementById(id);
-                            var expanded = fileInfo.getAttribute('aria-expanded') === 'true';
-
-                            // Toggle the aria-expanded attribute
-                            fileInfo.setAttribute('aria-expanded', !expanded);
-
-                            // Toggle the visibility of the file info
-                            if (expanded) {
-                                fileInfo.style.display = 'none';
-                            } else {
-                                fileInfo.style.display = 'block';
-                            }
-                        }
-
-                        function showMenu(id) {
-                            var menu = document.getElementById(id + "-menu");
-                            menu.style.display = "block";
-                        }
-
-                        function hideMenu(id) {
-                            var menu = document.getElementById(id + "-menu");
-                            menu.style.display = "none";
-                        }
-
-                        document.body.addEventListener('click', function (event) {
-
-
-                            var parent = event.target.parentNode;
-
-                            if (parent.id === 'fileSettingsButton'){
-
-                                return;
-                            }
-
-                            var menuOpen = document.querySelectorAll('.file-info');
-                            menuOpen.forEach(function (menu) {
-                                menu.setAttribute('aria-expanded', false);
-                                menu.style.display = 'none';
-                            });
-
-                            var buttonHolder = document.querySelectorAll('.fileButtonHolder');
-                            buttonHolder.forEach(function (button) {
-                                button.style.display = 'none';
-                            });
-
                         });
+                    }
+                });
 
 
 
-                        //Menu functions
+                //Menu functions
 
-                        function downloadFile(id) {
+                function downloadFile(id) {
 
-                            document.getElementById('fileIdDownloadInput').value = id;
+                    document.getElementById('fileIdDownloadInput').value = id;
 
-                            // Submit the form
-                            document.getElementById('downloadForm').submit();
-                        }
+                    // Submit the form
+                    document.getElementById('downloadForm').submit();
+                }
 
-                        function deleteFile(id, fileType) {
-                            document.getElementById('fileIdInput').value = id;
-                            document.getElementById('typeInput').value = fileType;
+                function deleteFile(id, fileType) {
+                    document.getElementById('fileIdInput').value = id;
+                    document.getElementById('typeInput').value = fileType;
 
-                            // Submit the form
-                            document.getElementById('deleteForm').submit();
-                        }
+                    // Submit the form
+                    document.getElementById('deleteForm').submit();
+                }
 
-                        function renameFile(id) {
-                            // Implement rename logic here
-                            console.log("Renaming file: " + id);
-                        }
+                function renameFile(id) {
+                    // Implement rename logic here
+                    console.log("Renaming file: " + id);
+                }
 
 
-                        function navIntoFolder(id, fileType, name) {
-                            if (fileType === "Folder") {
+                function navIntoFolder(id, fileType, name) {
+                    if (fileType === "Folder") {
 
-                                document.getElementById('idNavInput').value = id;
-                                document.getElementById('nameNavInput').value = name;
+                        document.getElementById('idNavInput').value = id;
+                        document.getElementById('nameNavInput').value = name;
 
-                                // Submit the form
-                                document.getElementById('navForm').submit();
-                            } else {
+                        // Submit the form
+                        document.getElementById('navForm').submit();
+                    } else {
 
-                                downloadFile(id);
-                            }
-                        }
-                    </script>
+                        downloadFile(id);
+                    }
+                }
+
+            </script>
 
 
 
@@ -291,38 +298,41 @@
 
 
     <!-- Scripts -->
-    <script>
-        // Console logger
-        var logger = '@ViewData["logger"]';
-        if (logger !== null) {
-            console.log(decodeHtml(logger));
-        }
+            <script>
+                // Console logger
+                var logger = '@ViewData["logger"]';
+                if (logger !== null) {
+                    console.log(decodeHtml(logger));
+                }
 
-        //Decodes html text
-        function decodeHtml(html) {
-            var txt = document.createElement("textarea");
-            txt.innerHTML = html;
-            return txt.value;
-        }
+                //Decodes html text
+                function decodeHtml(html) {
+                    var txt = document.createElement("textarea");
+                    txt.innerHTML = html;
+                    return txt.value;
+                }
 
-        //Changes the sort image when pressed
-        function toggleSort() {
-            // Submit the form
-            document.getElementById('sortForm').submit();
-        }
+                //Changes the sort image when pressed
+                function toggleSort() {
+                    // Submit the form
+                    document.getElementById('sortForm').submit();
+                }
 
-        //Loads naming folder popup
-        function showInputBox() {
-            document.getElementById('input-box').style.display = 'block';
-            document.querySelector('#input-box input[name="foldername"]').focus();
-        }
+                //Loads naming folder popup
+                function showInputBox() {
+                    document.getElementById('input-box').style.display = 'block';
+                    document.querySelector('#input-box input[name="foldername"]').focus();
+                }
 
-        //Cancels the folder creation
-        function cancelFolderCreation() {
-            document.getElementById('input-box').style.display = 'none';
-        }
+                //Cancels the folder creation
+                function cancelFolderCreation() {
+                    document.getElementById('input-box').style.display = 'none';
+                }
 
-    </script>
+
+
+
+            </script>
 
     string SetSort()
     {
@@ -409,28 +419,28 @@
 
     
     <!-- Hidden form for delete action -->
-            <form id="deleteForm" method="post" asp-page-handler="Delete">
-                <input name="fileId" type="hidden" id="fileIdInput">
-                <input name="type" type="hidden" id="typeInput">
-            </form>
+                    <form id="deleteForm" method="post" asp-page-handler="Delete">
+                        <input name="fileId" type="hidden" id="fileIdInput">
+                        <input name="type" type="hidden" id="typeInput">
+                    </form>
 
     <!-- Hidden form for download action -->
-            <form id="downloadForm" method="post" asp-page-handler="Download">
-                <input name="fileId" type="hidden" id="fileIdDownloadInput">
-            </form>
+                    <form id="downloadForm" method="post" asp-page-handler="Download">
+                        <input name="fileId" type="hidden" id="fileIdDownloadInput">
+                    </form>
 
     <!-- Hidden form for nav action -->
-            <form id="navForm" method="post" asp-page-handler="Navigate">
-                <input name="Id" type="hidden" id="idNavInput">
-                <input name="Name" type="hidden" id="nameNavInput">
-            </form>
+                    <form id="navForm" method="post" asp-page-handler="Navigate">
+                        <input name="Id" type="hidden" id="idNavInput">
+                        <input name="Name" type="hidden" id="nameNavInput">
+                    </form>
 
 
 
 
     <!-- Hidden form for sorting -->
-        <form id="sortForm" method="post" asp-page-handler="Sort">
-        </form>
+                <form id="sortForm" method="post" asp-page-handler="Sort">
+                </form>
 
 
 }
