Fixed sort icon bug (icon not switching)

--- a/Ethereal Cloud/Pages/Upload.cshtml
+++ b/Ethereal Cloud/Pages/Upload.cshtml
@@ -330,13 +330,14 @@
                 }
 
 
+        console.log("sort: "+ @Model.sortDisplay)
 
-
-            </script>
+    </script>
+   
 
     string SetSort()
     {
-        if (Model.sortDisplay)
+        if (@Model.sortDisplay)
         {
             // Alphabetical
             return "images/tools/sort-alpha-up.svg";
